--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "g-i-s",
-  "version": "2.1.6",
+  "version": "1.0.0",
   "description": "Google Image Search",
   "main": "index.js",
   "scripts": {
@@ -11,7 +11,7 @@
     "url": "git@github.com:jimkang/g-i-s.git"
   },
   "keywords": [],
-  "author": "Jim Kang",
+  "author": "Risa Fletcher, Jim Kang",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/jimkang/g-i-s/issues"
