update package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "g-i-s",
+  "name": "risafletcher/g-i-s",
   "version": "1.0.0",
   "description": "Google Image Search",
   "main": "index.js",
