--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "GIS",
-  "version": "1.0.0",
-  "description": "Node Image Search",
+  "version": "1.0.2",
+  "description": "Ghastly Image Search",
   "main": "index.js",
   "scripts": {
     "test": "make test"
