--- a/package.json
+++ b/package.json
@@ -2,10 +2,7 @@
   "name": "GIS",
   "version": "1.0.2",
   "description": "Ghastly Image Search",
-  "main": "index.js",
-  "scripts": {
-    "test": "make test"
-  },
+  "main": "./index.js",
   "type": "module",
   "keywords": [],
   "author": "Elliot Berry, Risa Fletcher, Jim Kang",
