--- a/package.json
+++ b/package.json
@@ -8,39 +8,26 @@
   "author": "Elliot Berry, Risa Fletcher, Jim Kang",
   "license": "MIT",
   "devDependencies": {
-    "eslint": "^8.48.0"
+    "@eslint/js": "^9.12.0",
+    "@release-it/bumper": "^6.0.1",
+    "@stylistic/eslint-plugin-js": "^2.9.0",
+    "eslint": "^9.12.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-no-secrets": "^1.0.2",
+    "eslint-plugin-package-json": "^0.15.3",
+    "eslint-plugin-perfectionist": "^3.8.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-security": "^3.0.1",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-sonarjs": "^2.0.3",
+    "eslint-plugin-unicorn": "^56.0.0",
+    "prettier": "^3.3.3",
+    "release-it": "^17.7.0"
   },
   "dependencies": {
-    "cheerio": "^1.0.0-rc.12",
-    "lodash.flatten": "^4.4.0",
-    "node-fetch": "^3.3.2"
-  },
-  "eslintConfig": {
-    "env": {
-      "browser": true,
-      "commonjs": true,
-      "es6": true
-    },
-    "sourceType": "module",
-    "extends": "eslint:recommended",
-    "rules": {
-      "indent": [
-        "error",
-        2
-      ],
-      "linebreak-style": [
-        "error",
-        "unix"
-      ],
-      "quotes": [
-        "error",
-        "single"
-      ],
-      "semi": [
-        "error",
-        "always"
-      ],
-      "no-console": "off"
-    }
+    "cheerio": "^1.0.0",
+    "lodash.flatten": "^4.4.0"
   }
+
+ 
 }
